--- a/index.html
+++ b/index.html
@@ -6,17 +6,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Love Maths</title>
     <script src="https://kit.fontawesome.com/7eb6fd173c.js" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     <h1 class="heading">
-        <img src="assets/images/logo.png" alt="logo" class="logo">
+        <img src="assets/images/logo.png" alt="logo" class="logo"> Love Maths
     </h1>
-    <div class="game-area"></div>
+    <div class="game-area">
+        <div class="controls-area">
+            <button class="btn btn--big btn--green">
+                <i class="fa-solid fa-plus"></i>
+            </button>
+            <button class="btn btn--big btn--blue">
+                <i class="fa-solid fa-minus"></i>
+            </button>
+            <button class="btn btn--big btn--orange">
+                <i class="fa-solid fa-times"></i>
+            </button>
+            <button class="btn btn--big btn--red">
+                <i class="fa-solid fa-divide"></i>
+            </button>
+        </div>
+        <div class="question-area">
+            <span id="operand1">0</span>
+            <span id="operator">x</span>
+            <span id="operand2">0</span>
+            <span>=</span>
+            <p class="answer-message">Enter Answer:</p>
+            <input type="number" name="" id="answer-box">
+        </div>
+        <button class="btn btn--gray">Submit Answer</button>
+    </div>
     <div class="score-area">
         <p class="scores">Correct Answers <span id="score">0</span></p>
         <p class="scores">Incorrect Answers <span id="incorrect">0</span></p>
     </div>
     <script src="assets/js/script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+
 </body>
 </html>
