--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
     </h1>
     <div class="game-area">
         <div class="controls-area">
-            <button class="btn btn--big btn--green">
+            <button class="btn btn--big btn--green" data-type="addition">
                 <i class="fa-solid fa-plus"></i>
             </button>
-            <button class="btn btn--big btn--blue">
+            <button class="btn btn--big btn--blue" data-type="substract">
                 <i class="fa-solid fa-minus"></i>
             </button>
-            <button class="btn btn--big btn--orange">
+            <button class="btn btn--big btn--orange" data-type="multiply">
                 <i class="fa-solid fa-times"></i>
             </button>
-            <button class="btn btn--big btn--red">
+            <button class="btn btn--big btn--red" data-type="division">
                 <i class="fa-solid fa-divide"></i>
             </button>
         </div>
@@ -36,7 +36,7 @@
             <p class="answer-message">Enter Answer:</p>
             <input type="number" name="" id="answer-box">
         </div>
-        <button class="btn btn--gray">Submit Answer</button>
+        <button class="btn btn--gray" data-type="submit">Submit Answer</button>
     </div>
     <div class="score-area">
         <p class="scores">Correct Answers <span id="score">0</span></p>
